--- a/html/game.html
+++ b/html/game.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malevolent Vision - Game</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
-        canvas {
-            border: 3px solid black;
-        }
+      canvas {
+        border: 3px solid black;
+      }
+
+      #health-bar {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        width: 150px;
+        height: 15px;
+        border: 1px solid white;
+        background-color: black;
+      }
+
+      #health-bar-fill {
+        height: 100%;
+        background-color: red;
+        width: 100%; 
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="health-bar">
+      <div id="health-bar-fill"></div>
+    </div>
     <canvas id="gameCanvas"></canvas>
     <script type="module" src="../js/game/game.js"></script>
-</body>
+  </body>
 </html>
